--- a/back/package.json
+++ b/back/package.json
@@ -1,10 +1,11 @@
 {
   "name": "back",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,6 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "mongoose": "^5.4.20",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.4.20"
   }
 }
