--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,10 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
     "typescript": "^3.4.4"
