--- a/back/dockerfile
+++ b/back/dockerfile
@@ -1,19 +1,23 @@
-FROM node:10.15
+FROM node:10-alpine
+
+# modules permissions and directories creation
+RUN mkdir -p /umla/app/back/node_modules && chown -R node:node /umla/app/back
 
 # Create app directory
-WORKDIR /back
+WORKDIR /umla/app/back
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY /package*.json /back/
+COPY /package*.json ./
+
+# specifying user
+USER node
 
 RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
 
 # Bundle app source
-COPY . /back/
+COPY --chown=node:node . .
 
 EXPOSE 1337
 
