--- a/back/package.json
+++ b/back/package.json
@@ -3,16 +3,21 @@
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
+  "author": "Hatim Nourbay <>",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --inspect src/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "bootstrap",
+    "express"
+  ],
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "jwt-simple": "^0.5.6",
