--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
     ########################
 
     back:
-        build: 
-            context: ./back
-            dockerfile: dockerfile
-        image: umla_back
+        # When building from compose to access the dockerfiles
+        #build: 
+        #    context: ./back
+        #    dockerfile: dockerfile
+        image: lepingu/umla_back
         container_name: umla_back
-        restart: unless-stopped
+        restart: always
+        #restart: unless-stopped
         env_file: .env
         environment:
             - MONGO_USERNAME=$MONGO_USERNAME
@@ -20,18 +22,21 @@ services:
             - MONGO_PORT=$MONGO_PORT
             - MONGO_DB=$MONGO_DB
             - API_HOST=${API_HOST}
-            - APP_SERVER_PORT=${APP_SERVER_PORT}
+            #- APP_SERVER_PORT=${APP_SERVER_PORT}
+            - APP_SERVER_PORT=1337
         expose:
-            - ${APP_SERVER_PORT}
+            #- ${APP_SERVER_PORT}
+            - "1337"
         ports:
-            - ${APP_SERVER_PORT}:${APP_SERVER_PORT}
+            #- ${APP_SERVER_PORT}:${APP_SERVER_PORT}
+            - "1337:1337"
         volumes:
             - ./back:/umla/app/back/
             - ./back/node_modules:/umla/app/back/node_modules
         networks:
             - app-network
         #command: ./wait-for.sh db:27017
-    
+     
     #######################
     #  Mongo db Container #
     #######################
@@ -39,8 +44,9 @@ services:
     db:
         image: mongo:4.1.8-xenial
         container_name: db
-        restart: unless-stopped
-        env_file: .env
+        restart: always
+        #restart: unless-stopped
+        #env_file: .env
         environment:
             - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
             - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
@@ -53,18 +59,22 @@ services:
     ####################
     
     client:
-        build: 
-            context: ./client
-            dockerfile: dockerfile
-        image: umla_client
+        #build: 
+        #    context: ./client
+        #    dockerfile: dockerfile
+        image: lepingu/umla_client
         container_name: umla_client
-        restart: unless-stopped
+        restart: always
+        #restart: unless-stopped
         environment:
-            - REACT_APP_PORT=${REACT_APP_PORT}
+            #- REACT_APP_PORT=${REACT_APP_PORT}
+            - REACT_APP_PORT=3000
         expose:
-            - ${REACT_APP_PORT}
+            #- ${REACT_APP_PORT}
+            - "3000"
         ports:
-            - ${REACT_APP_PORT}:${REACT_APP_PORT}
+            #- ${REACT_APP_PORT}:${REACT_APP_PORT}
+            - "3000:3000"
         volumes:
             - ./client:/umla/app/client/
             - ./client/node_modules:/umla/app/client/node_modules
@@ -79,4 +89,4 @@ networks:
 
 volumes:
   dbdata:
-  node_modules: 
+  #node_modules: 
