--- a/client/jenkins/Jenkinsfile
+++ b/client/jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Build') { 
             steps {
-                sh 'cd client'
+                //sh 'cd client'
                 sh 'npm install' 
             }
         }
