--- a/client/jenkins/Jenkinsfile
+++ b/client/jenkins/Jenkinsfile
@@ -17,8 +17,8 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh 'chmod +x ./jenkins/scripts/test.sh'
-                sh './jenkins/scripts/test.sh'
+                sh 'chmod +x ./client/jenkins/scripts/test.sh'
+                sh './client/jenkins/scripts/test.sh'
             }
         }
         /*stage('Deliver') {
